--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </div>
 
     <nav class="nav">
-      <a href="#research">Research</a>
-      <a href="#members">Members</a>
-      <a href="#publications">Publications</a>
-      <a href="#contact">Contact</a>
+      <a href="./">Home</a>
+      <a href="research/">Research</a>
+      <a href="members/">Members</a>
+      <a href="publications/">Publications</a>
+      <a href="contact/">Contact</a>
     </nav>
   </header>
 
