--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
       <a href="../research/">Research</a>
       <a href="../members/">Members</a>
       <a href="../publications/">Publications</a>
-      <a href="../contact/">Contact</a>
+      <a class="active" href="../contact/">Contact</a>
     </nav>
   </header>
 
