--- a/members/index.html
+++ b/members/index.html
@@ -15,7 +15,7 @@
     <nav class="nav">
       <a href="../">Home</a>
       <a href="../research/">Research</a>
-      <a href="../members/">Members</a>
+      <a class="active" href="../members/">Members</a>
       <a href="../publications/">Publications</a>
       <a href="../contact/">Contact</a>
     </nav>
