--- a/publications/index.html
+++ b/publications/index.html
@@ -16,7 +16,7 @@
       <a href="../">Home</a>
       <a href="../research/">Research</a>
       <a href="../members/">Members</a>
-      <a href="../publications/">Publications</a>
+      <a class="active" href="../publications/">Publications</a>
       <a href="../contact/">Contact</a>
     </nav>
   </header>
