--- a/research/index.html
+++ b/research/index.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="nav">
       <a href="../">Home</a>
-      <a href="../research/">Research</a>
+      <a class="active" href="../research/">Research</a>
       <a href="../members/">Members</a>
       <a href="../publications/">Publications</a>
       <a href="../contact/">Contact</a>
