--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OOO Lab</title>
+  <meta name="description" content="OOO Lab — Immunology / Skin / Microbiome research at ___ University" />
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 
@@ -15,7 +16,7 @@
     </div>
 
     <nav class="nav">
-      <a href="./">Home</a>
+      <a class="active" href="./">Home</a>
       <a href="research/">Research</a>
       <a href="members/">Members</a>
       <a href="publications/">Publications</a>
@@ -24,38 +25,126 @@
   </header>
 
   <main class="wrap">
-    <section id="research" class="card">
-      <h2>Research</h2>
-      <p>여기에 연구실 한 문단 소개. 키워드 3개만 박아도 됨.</p>
-      <ul>
-        <li>Theme 1: ___</li>
-        <li>Theme 2: ___</li>
-        <li>Theme 3: ___</li>
-      </ul>
+    <!-- HERO -->
+    <section class="hero card">
+      <div>
+        <p class="kicker">We study</p>
+        <h2 class="hero-title">Skin immunity, epithelial biology, and host–microbe interactions</h2>
+        <p class="hero-lead">
+          OOO Lab은 ___를 중심으로, ___ 메커니즘을 규명하고 이를 ___에 연결하는 연구를 합니다.
+        </p>
+
+        <div class="cta">
+          <a class="btn" href="research/">Research overview</a>
+          <a class="btn ghost" href="contact/">Contact</a>
+        </div>
+
+        <div class="badges">
+          <span class="badge">Mouse models</span>
+          <span class="badge">Flow cytometry</span>
+          <span class="badge">Single-cell</span>
+          <span class="badge">Microbiome</span>
+        </div>
+      </div>
+
+      <!-- 사진 넣고 싶으면 assets 폴더에 이미지 올리고 src만 바꾸면 됨 -->
+      <div class="hero-media" aria-label="Lab photo placeholder">
+        <div class="media-placeholder">
+          <p><b>Lab photo</b></p>
+          <p class="muted">assets/에 이미지 올리고 여기 연결</p>
+        </div>
+      </div>
     </section>
 
-    <section id="members" class="card">
-      <h2>Members</h2>
-      <ul>
-        <li><b>PI</b>: ___</li>
-        <li><b>PhD</b>: ___</li>
-        <li><b>MS</b>: ___</li>
-        <li><b>Intern</b>: ___</li>
-      </ul>
+    <!-- RESEARCH HIGHLIGHTS -->
+    <section class="card">
+      <div class="section-head">
+        <h2>Research Highlights</h2>
+        <p class="muted">핵심 주제 3~4개만 박으면 “연구실 느낌” 바로 난다.</p>
+      </div>
+
+      <div class="grid">
+        <article class="tile">
+          <h3>Theme 1</h3>
+          <p>한 문단 설명. (왜 중요한지 + 뭘 보겠다는지)</p>
+          <p class="muted">Keywords: ___, ___, ___</p>
+        </article>
+
+        <article class="tile">
+          <h3>Theme 2</h3>
+          <p>한 문단 설명.</p>
+          <p class="muted">Keywords: ___, ___, ___</p>
+        </article>
+
+        <article class="tile">
+          <h3>Theme 3</h3>
+          <p>한 문단 설명.</p>
+          <p class="muted">Keywords: ___, ___, ___</p>
+        </article>
+
+        <article class="tile">
+          <h3>Platform / Methods</h3>
+          <p>우리가 잘 하는 방법들 한 줄 요약.</p>
+          <p class="muted">e.g., scRNA-seq, imaging, ELISA, gnotobiotic, etc.</p>
+        </article>
+      </div>
     </section>
 
-    <section id="publications" class="card">
-      <h2>Publications</h2>
-      <ol>
-        <li>Author. Title. Journal. Year.</li>
-        <li>Author. Title. Journal. Year.</li>
-      </ol>
+    <!-- LATEST -->
+    <section class="card">
+      <div class="section-head">
+        <h2>Latest</h2>
+        <p class="muted">최근 논문/뉴스 3개 정도만. 사이트가 “살아있어” 보임.</p>
+      </div>
+
+      <div class="grid two">
+        <div class="tile">
+          <h3>Recent publications</h3>
+          <ol class="list">
+            <li>
+              <b>Author</b>. Title. <i>Journal</i>. (Year).
+              <a href="#" target="_blank" rel="noreferrer">DOI</a>
+            </li>
+            <li>
+              <b>Author</b>. Title. <i>Journal</i>. (Year).
+              <a href="#" target="_blank" rel="noreferrer">DOI</a>
+            </li>
+            <li>
+              <b>Author</b>. Title. <i>Journal</i>. (Year).
+              <a href="#" target="_blank" rel="noreferrer">DOI</a>
+            </li>
+          </ol>
+          <p class="muted"><a href="publications/">See all publications →</a></p>
+        </div>
+
+        <div class="tile">
+          <h3>News</h3>
+          <ul class="list">
+            <li><b>2026-__</b> — New paper accepted in ___ 🎉</li>
+            <li><b>2026-__</b> — Welcome new member ___</li>
+            <li><b>2026-__</b> — Conference: ___</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-    <section id="contact" class="card">
-      <h2>Contact</h2>
-      <p>Email: ___@___</p>
-      <p>Address: ___</p>
+    <!-- JOIN -->
+    <section class="card">
+      <div class="section-head">
+        <h2>Join Us</h2>
+        <p class="muted">지원 안내가 있으면 “진짜 연구실”로 보임.</p>
+      </div>
+      <div class="tile">
+        <p>
+          We are recruiting <b>MS/PhD students</b> and <b>interns</b>.
+          관심 있으면 간단한 CV와 관심 주제를 이메일로 보내주세요.
+        </p>
+        <p class="muted">Email: ___@___ / Subject: [OOO Lab] Prospective student — Name</p>
+        <div class="cta">
+          <a class="btn" href="contact/">Contact</a>
+          <a class="btn ghost" href="members/">Meet the team</a>
+        </div>
+      </div>
     </section>
   </main>
 
