--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OOO Lab</title>
   <meta name="description" content="OOO Lab — Immunology / Skin / Microbiome research at ___ University" />
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="assets/style.css?v=2" />
 </head>
 
 <body>
