--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
       </div>
 
       <!-- 사진 넣고 싶으면 assets 폴더에 이미지 올리고 src만 바꾸면 됨 -->
-      <div class="hero-media" aria-label="Lab photo placeholder">
-        <div class="media-placeholder">
-          <p><b>Lab photo</b></p>
-          <p class="muted">assets/에 이미지 올리고 여기 연결</p>
-        </div>
+      <div class="hero-media">
+        <img class="hero-img" src="KakaoTalk_20230211_201427558_01.jpg" alt="Lab photo" />
       </div>
     </section>
 
