--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OOO Lab</title>
-  <meta name="description" content="OOO Lab — Immunology / Skin / Microbiome research at ___ University" />
+  <title>Duck Lab</title>
+  <meta name="description" content="Duck Lab — Immunology / Skin / Microbiome research at ___ University" />
   <link rel="stylesheet" href="assets/style.css?v=2" />
 </head>
 
@@ -31,7 +31,7 @@
         <p class="kicker">We study</p>
         <h2 class="hero-title">Skin immunity, epithelial biology, and host–microbe interactions</h2>
         <p class="hero-lead">
-          OOO Lab은 ___를 중심으로, ___ 메커니즘을 규명하고 이를 ___에 연결하는 연구를 합니다.
+          Duck Lab은 ___를 중심으로, ___ 메커니즘을 규명하고 이를 ___에 연결하는 연구를 합니다.
         </p>
 
         <div class="cta">
@@ -136,7 +136,7 @@
           We are recruiting <b>MS/PhD students</b> and <b>interns</b>.
           관심 있으면 간단한 CV와 관심 주제를 이메일로 보내주세요.
         </p>
-        <p class="muted">Email: ___@___ / Subject: [OOO Lab] Prospective student — Name</p>
+        <p class="muted">Email: ___@___ / Subject: [Duck Lab] Prospective student — Name</p>
         <div class="cta">
           <a class="btn" href="contact/">Contact</a>
           <a class="btn ghost" href="members/">Meet the team</a>
@@ -146,7 +146,7 @@
   </main>
 
   <footer class="wrap footer">
-    <small>© <span id="y"></span> OOO Lab</small>
+    <small>© <span id="y"></span> Duck Lab</small>
   </footer>
 
   <script>
