--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="wrap header">
     <div>
-      <h1>OOO Lab</h1>
+      <h1>Duck Lab</h1>
       <p class="sub">Department of ___, ___ University</p>
     </div>
 
