--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Research | OOO Lab</title>
-  <link rel="stylesheet" href="../assets/style.css?v=2" />
+  <link rel="stylesheet" href="../favicon.ico?v=1" />
 </head>
 <body>
   <header class="wrap header">
