--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Duck Lab</title>
   <meta name="description" content="Duck Lab — Immunology / Skin / Microbiome research at ___ University" />
-  <link rel="stylesheet" href="favicon.ico?v=1" />
+  <link rel="icon" href="favicon.ico?v=1" />
 </head>
 
 <body>
