--- a/publications/index.html
+++ b/publications/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications | OOO Lab</title>
-  <link rel="stylesheet" href="../favicon.ico?v=1" />
+  <link rel="icon" href="../favicon.ico?v=1" />
 </head>
 <body>
   <header class="wrap header">
