--- a/members/index.html
+++ b/members/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Members | OOO Lab</title>
-  <link rel="icon" href="../favicon.ico?v=1" />
+  <link rel="stylesheet" href="../assets/style.css?v=2">
+  <link rel="icon" href="../favicon.ico?v=1">
 </head>
 <body>
   <header class="wrap header">
