--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Duck Lab</title>
   <meta name="description" content="Duck Lab — Immunology / Skin / Microbiome research at ___ University" />
   <link rel="stylesheet" href="assets/style.css?v=2">
-  <link rel="icon" href="favicon.ico?v=1" />
+  <link rel="icon" href="favicon.ico?v=1">
 </head>
 
 <body>
