--- a/contact/index.html
+++ b/contact/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | OOO Lab</title>
+  <title>Contact | Duck Lab</title>
   <link rel="stylesheet" href="../assets/style.css?v=2">
   <link rel="icon" href="../favicon.ico?v=1">
 </head>
 <body>
   <header class="wrap header">
     <div>
-      <h1>OOO Lab</h1>
+      <h1>Duck Lab</h1>
       <p class="sub">Contact</p>
     </div>
     <nav class="nav">
@@ -31,7 +31,7 @@
   </main>
 
   <footer class="wrap footer">
-    <small>© <span id="y"></span> OOO Lab</small>
+    <small>© <span id="y"></span> Duck Lab</small>
   </footer>
   <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
 </body>
