--- a/members/index.html
+++ b/members/index.html
@@ -34,9 +34,8 @@
 
       <div class="pills">
         <a class="pill" href="#pi">PI</a>
-        <a class="pill" href="#team-skin">Skin Immunity Team</a>
-        <a class="pill" href="#team-microbiome">Microbiome Team</a>
-        <a class="pill" href="#team-computation">Computation Team</a>
+        <a class="pill" href="#team-skin">Skin Team</a>
+        <a class="pill" href="#team-bga">Brain–Gut Axis Team</a>
         <a class="pill" href="#alumni">Alumni</a>
       </div>
     </section>
@@ -87,8 +86,8 @@
     <!-- Team: Skin Immunity -->
     <section id="team-skin" class="card">
       <div class="section-head">
-        <h2>Skin Immunity Team</h2>
-        <p class="muted">예: barrier, IL-17 axis, epithelial–immune crosstalk</p>
+        <h2>Skin Team</h2>
+        <p class="muted">Barrier • epithelial biology • skin immunity</p>
       </div>
 
       <div class="member-grid">
@@ -129,11 +128,11 @@
       </div>
     </section>
 
-    <!-- Team: Microbiome -->
-    <section id="team-microbiome" class="card">
+    <!-- Team: Brain-Gut Axis -->
+    <section id="team-bga" class="card">
       <div class="section-head">
-        <h2>Microbiome Team</h2>
-        <p class="muted">예: colonization, gnotobiotic, metabolite–immunity</p>
+        <h2>Brain–Gut Axis Team</h2>
+        <p class="muted">Microbiome • metabolites • neuroimmune interactions</p>
       </div>
 
       <div class="member-grid">
@@ -143,36 +142,11 @@
             <h3 class="member-name">C. D.</h3>
             <div class="member-meta">
               <span class="badge2">Postdoc</span>
-              <span class="badge2">Microbiome Team</span>
+              <span class="badge2">Brain-Gut Axis Team</span>
             </div>
             <p class="member-bio">한 줄 소개: ___를 통해 host–microbe 상호작용을 봅니다.</p>
             <div class="member-tags">
               <span class="tag">16S</span><span class="tag">Culture</span><span class="tag">Metabolomics</span>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- Team: Computation -->
-    <section id="team-computation" class="card">
-      <div class="section-head">
-        <h2>Computation Team</h2>
-        <p class="muted">예: single-cell analysis, pipelines, stats</p>
-      </div>
-
-      <div class="member-grid">
-        <article class="member">
-          <div class="avatar">EF</div>
-          <div class="member-body">
-            <h3 class="member-name">E. F.</h3>
-            <div class="member-meta">
-              <span class="badge2">Research Engineer</span>
-              <span class="badge2">Computation Team</span>
-            </div>
-            <p class="member-bio">한 줄 소개: 분석 파이프라인과 데이터 품질 관리를 담당.</p>
-            <div class="member-tags">
-              <span class="tag">Python</span><span class="tag">scRNA</span><span class="tag">QC</span>
             </div>
           </div>
         </article>
